renamed HTML pages and CSS stylesheets to proper names

--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
   <body>
     <h1>Bernadette's Coddy Practice</h1>
 
+    <h2>Home Page</h2>
+
     <p><strong>HTML Practice</strong></p>
     <p>
-      <a href="./pages/page1.html">Page 1</a>
+      <a href="./pages/basicTags.html">Basic Tags</a>
     </p>
     <p>
-      <a href="./pages/page2.html">Page 2</a>
+      <a href="./pages/htmlForms.html">HTML Forms</a>
     </p>
 
     <p><strong>CSS Practice</strong></p>
     <p>
-      <a href="./pages/page3.html">Box Model & Text</a>
+      <a href="./pages/boxModelText.html">Box Model & Text</a>
     </p>
 
     <p>
-      <a href="./pages/page4.html">Flex Box</a>
+      <a href="./pages/flexBox.html">Flex Box</a>
     </p>
 
     <p><strong>How to Center Div or Text using CSS</strong></p>
     <p>
-      <a href="./pages/page5.html">Center Div</a>
+      <a href="./pages/centerDivText.html">Center Div</a>
     </p>
   </body>
 </html>
