07 Nov - commits for centerDivText

--- a/pages/centerDivText.html
+++ b/pages/centerDivText.html
@@ -37,9 +37,31 @@
 
     <hr />
 
-    <p>Flexbox</p>
-    <div id="parent3">
-      <div id="child3" />
+    <div>
+      <p>Flexbox</p>
+      <div id="parent3">
+        <div id="child3" />
+      </div>
+    </div>
+
+    <hr />
+
+    <h1>CENTER TEXT</h1>
+
+    <div>
+      <p>Text Align</p>
+      <div class="parent4">
+        <p class="text4">This is a text.</p>
+      </div>
+    </div>
+
+    <hr />
+
+    <div>
+      <p>Flex Box</p>
+      <div class="parent5">
+        <p class="text5">Center the text here horizontal and vertical test.</p>
+      </div>
     </div>
   </body>
 </html>
