08 Nov - added flex container practice

--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
     <p>
       <a href="./pages/centerDivText.html">Center Div</a>
     </p>
+
+    <p><strong>CSS Flexbox</strong></p>
+    <p>
+      <a href="./pages/flexContainer.html">Flex Container</a>
+    </p>
   </body>
 </html>
