commit changes from previous code

--- a/index.html
+++ b/index.html
@@ -38,5 +38,12 @@
     <p>
       <a href="./pages/flexContainer.html">Flex Container</a>
     </p>
+
+    <hr />
+
+    <p><strong>Other Information</strong></p>
+    <p>
+      <a href="./pages/otherInformation.html">Notes</a>
+    </p>
   </body>
 </html>
