--- a/pages/flexContainer.html
+++ b/pages/flexContainer.html
@@ -17,6 +17,8 @@
       <div>4</div>
     </div>
 
+    <hr />
+
     <p><strong>Flex Direction</strong></p>
     <div class="container2">
       <div>1</div>
@@ -24,6 +26,8 @@
       <div>3</div>
       <div>4</div>
     </div>
+
+    <hr />
 
     <p><strong>Flex Wrap</strong></p>
     <div class="container3">
@@ -33,6 +37,60 @@
       <div>4</div>
       <div>5</div>
       <div>6</div>
+    </div>
+
+    <hr />
+
+    <p><strong>Flex Flow</strong></p>
+    <div class="container4">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+    </div>
+
+    <hr />
+
+    <p><strong>Justify Content</strong></p>
+    <div class="container5">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+    </div>
+
+    <hr />
+
+    <p><strong>Align Items</strong></p>
+    <div class="container6">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+    </div>
+
+    <hr />
+
+    <p><strong>Align Content</strong></p>
+    <div class="container7">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
+      <div>12</div>
     </div>
   </body>
 </html>
