16 Nov - commit changes for flexbox

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <p><strong>CSS Flexbox</strong></p>
     <p>
-      <a href="./pages/flexContainer.html">Flex Container</a>
+      <a href="./pages/cssFlexbox.html">Flex Container</a>
     </p>
 
     <hr />
