--- a/pages/cssFlexbox.html
+++ b/pages/cssFlexbox.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Flex Container</title>
-    <link rel="stylesheet" href="../styles/flexContainer.css" />
+    <link rel="stylesheet" href="../styles/cssFlexbox.css" />
   </head>
   <body>
     <a href="/index.html">Back to Home Page</a>
@@ -91,6 +91,47 @@
       <div>10</div>
       <div>11</div>
       <div>12</div>
+    </div>
+
+    <hr />
+
+    <p><strong>Gap</strong></p>
+    <div class="container8">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+    </div>
+
+    <hr />
+
+    <h1>Flex Item</h1>
+
+    <p><strong>Order</strong></p>
+    <div class="parent">
+      <div id="d1">1</div>
+      <div id="d2">2</div>
+      <div id="d3">3</div>
+    </div>
+
+    <hr />
+
+    <p><strong>Flex Grow</strong></p>
+    <div class="parent2">
+      <div>d1</div>
+      <div>d2</div>
+      <div>d3</div>
+    </div>
+
+    <hr />
+
+    <p><strong>Align Self</strong></p>
+    <div class="parent3">
+      <div>d1</div>
+      <div>d2</div>
+      <div>d3</div>
     </div>
   </body>
 </html>
